Added a gameplay scene that displays an icon
Made the play button transition to a gameplay scene
The gameplay scene displays a temporary icon image

--- a/Orbit/Resources/Info.plist
+++ b/Orbit/Resources/Info.plist
@@ -32,7 +32,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>F</string>
+	<string>10</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIPrerenderedIcon</key>
