Player's rotation changes as it orbits
The Player's rotation is now correctly set
Changed the intro layer to the GameplayLayer for debugging purposes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 Orbit.xcodeproj/project.xcworkspace/xcuserdata/dev.xcuserdatad/UserInterfaceState.xcuserstate
+
+Orbit.xcodeproj/project.xcworkspace/xcuserdata/hamdan.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
